[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'SpaceInvaderDQN'
version = '0.0.1'
authors = [
  { name='Brandon Knape', email='d.brandonk@gmail.com' },
]
description = 'SpaceInvaderDQN'
readme = 'README.md'
requires-python = '>=3.7'
dependencies = [
    'autorom[accept-rom-license]==0.6.1',
    'dm_tree==0.1.8',
    'gymnasium[atari]==0.26.3',
    'protobuf==3.20.0',
    'ray[tune]==2.4.0',
    'ray[rllib]==2.4.0',
    'scikit-image==0.20.0',
    'tensorboard==2.13.0',
    'torch==2.0.0',
]
